Rename national_id to phone_number across entire backend
- Update dashboard.py: Replace national_id with phone_number in all queries
- Update dashboard.html: Replace National ID with Phone Number in forms
- Update bulk upload CSV templates and documentation
- Update bulkuploadformats.md with phone_number examples
- Standardize phone number format to +966 international format

All dashboard functionality tested and working with production database

--- a/app/static/dashboard.html
+++ b/app/static/dashboard.html
@@ -247,8 +247,8 @@
                                     </div>
                                 </div>
                                 <div id="studentFields">
-                                    <label class="block text-sm font-medium mb-1">Phone Number</label>
-                                    <input type="text" name="phone_number" class="w-full">
+                                    <label class="block text-sm font-medium mb-1">National ID</label>
+                                    <input type="text" name="national_id" class="w-full">
                                 </div>
                                 <div id="teacherFields" class="hidden">
                                     <label class="block text-sm font-medium mb-1">Employee ID</label>
@@ -312,8 +312,8 @@
                             <div>
                                 <h4 class="font-medium mb-2">Student CSV Template</h4>
                                 <pre class="bg-gray-100 p-3 rounded text-sm overflow-x-auto">full_name,email,phone_number
-Ahmed Mohammed,ahmed@academy.edu,1234567890
-Sara Abdullah,sara@academy.edu,1234567891</pre>
+Ahmed Mohammed,ahmed@academy.edu,+966501234567
+Sara Abdullah,sara@academy.edu,+966501234568</pre>
                             </div>
                             <div>
                                 <h4 class="font-medium mb-2">Teacher CSV Template</h4>
