Fix missed input field name: national_id → phone_number
- Update form input name attribute in Create User form
- Label was already changed but input name was missed

--- a/app/static/dashboard.html
+++ b/app/static/dashboard.html
@@ -196,7 +196,7 @@
                             </div>
                             <div class="overflow-x-auto">
                                 <table>
-                                    <thead><tr><th>Name</th><th>National ID</th><th>Program</th><th>Status</th><th>Actions</th></tr></thead>
+                                    <thead><tr><th>Name</th><th>Phone number</th><th>Program</th><th>Status</th><th>Actions</th></tr></thead>
                                     <tbody id="studentsTable"></tbody>
                                 </table>
                             </div>
@@ -247,8 +247,8 @@
                                     </div>
                                 </div>
                                 <div id="studentFields">
-                                    <label class="block text-sm font-medium mb-1">National ID</label>
-                                    <input type="text" name="national_id" class="w-full">
+                                    <label class="block text-sm font-medium mb-1">Phone Number</label>
+                                    <input type="text" name="phone_number" class="w-full">
                                 </div>
                                 <div id="teacherFields" class="hidden">
                                     <label class="block text-sm font-medium mb-1">Employee ID</label>
