--- a/app/static/dashboard.html
+++ b/app/static/dashboard.html
@@ -115,19 +115,17 @@
     <div id="loginScreen" class="login-container">
         <div class="login-card" style="padding: 48px 40px;">
             <div style="text-align: center; margin-bottom: 32px;">
-                <div style="display: inline-flex; align-items: center; justify-content: center; width: 56px; height: 56px; background: linear-gradient(135deg, #3b82f6, #1d4ed8); border-radius: 14px; margin-bottom: 20px;">
-                    <i class="fa-solid fa-graduation-cap" style="color: #fff; font-size: 24px;"></i>
-                </div>
-                <h1 style="font-size: 24px; font-weight: 700; color: #0f172a; margin: 0;">Academy Admin</h1>
+                <img src="./assets/KAUSTAcademylogo.png" alt="KAUST Academy" style="max-width: 200px; height: auto; margin-bottom: 16px;">
+                <p style="font-size: 16px; font-weight: 500; color: #374151; margin: 0;">Admin Login</p>
             </div>
             <form id="loginForm">
                 <div style="margin-bottom: 20px;">
                     <label style="font-size: 14px; font-weight: 500; color: #374151; margin-bottom: 8px;">Email</label>
-                    <input type="email" id="loginEmail" placeholder="admin@academy.edu" required style="margin-top: 6px;">
+                    <input type="email" id="loginEmail" placeholder="email" required style="margin-top: 6px;">
                 </div>
                 <div style="margin-bottom: 24px;">
                     <label style="font-size: 14px; font-weight: 500; color: #374151; margin-bottom: 8px;">Password</label>
-                    <input type="password" id="loginPassword" placeholder="••••••••" required style="margin-top: 6px;">
+                    <input type="password" id="loginPassword" placeholder="password" required style="margin-top: 6px;">
                 </div>
                 <div id="loginError" class="hidden" style="background: #fef2f2; border: 1px solid #fecaca; border-radius: 8px; padding: 12px; margin-bottom: 16px; color: #dc2626; font-size: 14px;"></div>
                 <button type="submit" class="btn-primary" style="font-size: 15px; padding: 14px 20px;">
@@ -143,13 +141,7 @@
         <div class="fixed left-0 top-0 h-full w-64 sidebar text-white z-50" style="display: flex; flex-direction: column;">
             <div style="padding: 24px 20px; border-bottom: 1px solid rgba(255,255,255,0.1);">
                 <div style="display: flex; align-items: center; gap: 12px;">
-                    <div style="width: 40px; height: 40px; background: linear-gradient(135deg, #3b82f6, #1d4ed8); border-radius: 10px; display: flex; align-items: center; justify-content: center;">
-                        <i class="fa-solid fa-graduation-cap" style="color: #fff; font-size: 18px;"></i>
-                    </div>
-                    <div>
-                        <div style="font-weight: 600; font-size: 15px; color: #fff;">Academy Admin</div>
-                        <div style="font-size: 12px; color: #94a3b8;" id="adminName">Administrator</div>
-                    </div>
+                    <img src="./assets/KAUSTAcademyWhite.png" alt="KAUST Academy" style="height: 40px; width: auto;">
                 </div>
             </div>
             <nav style="flex: 1; padding: 16px 0; overflow-y: auto;">
