--- a/app/static/dashboard.html
+++ b/app/static/dashboard.html
@@ -141,7 +141,7 @@
         <div class="fixed left-0 top-0 h-full w-64 sidebar text-white z-50" style="display: flex; flex-direction: column;">
             <div style="padding: 24px 20px; border-bottom: 1px solid rgba(255,255,255,0.1);">
                 <div style="display: flex; align-items: center; gap: 12px;">
-                    <img src="./assets/KAUSTAcademyWhite.png" alt="KAUST Academy" style="height: 40px; width: auto;">
+                    <img src="/static/assets/KAUSTAcademyWhite.png" alt="KAUST Academy" style="height: 40px; width: auto;">
                 </div>
             </div>
             <nav style="flex: 1; padding: 16px 0; overflow-y: auto;">
