bugfix: fix logo

--- a/app/static/dashboard.html
+++ b/app/static/dashboard.html
@@ -115,7 +115,7 @@
     <div id="loginScreen" class="login-container">
         <div class="login-card" style="padding: 48px 40px;">
             <div style="text-align: center; margin-bottom: 32px;">
-                <img src="./assets/KAUSTAcademylogo.png" alt="KAUST Academy" style="max-width: 200px; height: auto; margin-bottom: 16px;">
+                <img src="/static/assets/KAUSTAcademylogo.png" alt="KAUST Academy" style="max-width: 200px; height: auto; margin-bottom: 16px;">
                 <p style="font-size: 16px; font-weight: 500; color: #374151; margin: 0;">Admin Login</p>
             </div>
             <form id="loginForm">
