bugfix: tiny changes to logos

--- a/app/static/dashboard.html
+++ b/app/static/dashboard.html
@@ -115,7 +115,7 @@
     <div id="loginScreen" class="login-container">
         <div class="login-card" style="padding: 48px 40px;">
             <div style="text-align: center; margin-bottom: 32px;">
-                <img src="/static/assets/KAUSTAcademylogo.png" alt="KAUST Academy" style="max-width: 200px; height: auto; margin-bottom: 16px;">
+                <img src="/static/assets/KAUSTAcademylogo.png" alt="KAUST Academy" style="max-width: 200px; height: auto; margin-bottom: 16px; display: block; margin-left: auto; margin-right: auto;">
                 <p style="font-size: 16px; font-weight: 500; color: #374151; margin: 0;">Admin Login</p>
             </div>
             <form id="loginForm">
@@ -140,8 +140,8 @@
         <!-- Sidebar -->
         <div class="fixed left-0 top-0 h-full w-64 sidebar text-white z-50" style="display: flex; flex-direction: column;">
             <div style="padding: 24px 20px; border-bottom: 1px solid rgba(255,255,255,0.1);">
-                <div style="display: flex; align-items: center; gap: 12px;">
-                    <img src="/static/assets/KAUSTAcademyWhite.png" alt="KAUST Academy" style="height: 40px; width: auto;">
+                <div style="display: flex; align-items: center; justify-content: center;">
+                    <img src="/static/assets/KAUSTAcademyWhite.png" alt="KAUST Academy" style="height: 68px; width: auto;">
                 </div>
             </div>
             <nav style="flex: 1; padding: 16px 0; overflow-y: auto;">
