--- a/app/static/dashboard.html
+++ b/app/static/dashboard.html
@@ -177,6 +177,9 @@
                 <button id="logoutBtn" style="width: 100%; background: rgba(255,255,255,0.05); border: none; padding: 12px; border-radius: 8px; color: #cbd5e1; font-size: 14px; font-weight: 500; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 8px; transition: background 0.15s;">
                     <i class="fa-solid fa-right-from-bracket"></i> Sign Out
                 </button>
+                <button id="aboutBtn" onclick="showPage('about')" style="width: 100%; background: transparent; border: none; padding: 8px; border-radius: 6px; color: #64748b; font-size: 12px; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 6px; margin-top: 8px; transition: color 0.15s;">
+                    <i class="fa-solid fa-circle-info" style="font-size: 11px;"></i> About
+                </button>
             </div>
         </div>
 
@@ -822,6 +825,38 @@ Dr. Fatima Al-Saud,fatima@academy.edu</pre>
                         </div>
                     </div>
                 </div>
+
+                <!-- About Page -->
+                <div id="page-about" class="page-content hidden">
+                    <div class="card" style="padding: 48px; max-width: 800px; margin: 0 auto;">
+                        <div style="display: flex; align-items: flex-start; gap: 40px;">
+                            <div style="flex-shrink: 0; max-width: 25%;">
+                                <img src="/static/assets/logo.png" alt="Rikoukei Labs" style="width: 100%; height: auto;">
+                            </div>
+                            <div style="flex: 1; display: flex; flex-direction: column; justify-content: center;">
+                                <h2 style="font-size: 28px; font-weight: 700; color: #0f172a; margin: 0 0 4px 0;">Rikoukei Labs</h2>
+                                <p style="font-size: 16px; font-style: italic; color: #64748b; margin: 0 0 24px 0;">Scientific Software Solutions</p>
+                                <div style="font-size: 14px; color: #475569; line-height: 1.8;">
+                                    <p style="margin: 0 0 8px 0;">
+                                        <i class="fa-solid fa-globe" style="width: 18px; color: #94a3b8;"></i>
+                                        <a href="https://www.rikoukeilabs.com" target="_blank" style="color: #2563eb; text-decoration: none;">www.rikoukeilabs.com</a>
+                                    </p>
+                                    <p style="margin: 0 0 8px 0;">
+                                        <i class="fa-solid fa-user" style="width: 18px; color: #94a3b8;"></i>
+                                        <span>Contact - Sam Victor, Principal Architect</span>
+                                    </p>
+                                    <p style="margin: 0;">
+                                        <i class="fa-solid fa-envelope" style="width: 18px; color: #94a3b8;"></i>
+                                        <a href="mailto:sam.victor@rikoukeilabs.com" style="color: #2563eb; text-decoration: none;">sam.victor@rikoukeilabs.com</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div style="margin-top: 40px; padding-top: 24px; border-top: 1px solid #e2e8f0; text-align: center;">
+                            <p style="font-size: 12px; color: #94a3b8; margin: 0;">© 2026, Rikoukei Labs FZ-LLC, All rights reserved.</p>
+                        </div>
+                    </div>
+                </div>
             </main>
         </div>
     </div>
@@ -952,8 +987,20 @@ Dr. Fatima Al-Saud,fatima@academy.edu</pre>
             bulk: 'Import Data via CSV',
             allowances: 'Financial Management',
             programs: 'Cost Centers & Programs',
-            telemetry: 'System Monitoring'
+            telemetry: 'System Monitoring',
+            about: 'Developer Information'
         };
+
+        function showPage(page) {
+            // For non-sidebar pages like About
+            document.querySelectorAll('.sidebar-item').forEach(i => i.classList.remove('active'));
+            document.querySelectorAll('.page-content').forEach(p => p.classList.add('hidden'));
+            document.getElementById(`page-${page}`).classList.remove('hidden');
+            
+            const titles = { about: 'About' };
+            document.getElementById('pageTitle').textContent = titles[page] || page;
+            document.getElementById('pageBreadcrumb').textContent = pageBreadcrumbs[page] || '';
+        }
 
         function navigateTo(page) {
             document.querySelectorAll('.sidebar-item').forEach(i => i.classList.remove('active'));
