bugfix: card color edit on about

--- a/app/static/dashboard.html
+++ b/app/static/dashboard.html
@@ -828,7 +828,7 @@ Dr. Fatima Al-Saud,fatima@academy.edu</pre>
 
                 <!-- About Page -->
                 <div id="page-about" class="page-content hidden">
-                    <div class="card" style="padding: 48px; max-width: 800px; margin: 0 auto;">
+                    <div class="card" style="padding: 48px; max-width: 800px; margin: 0 auto; background-color: #585858;">
                         <div style="display: flex; align-items: flex-start; gap: 40px;">
                             <div style="flex-shrink: 0; max-width: 25%;">
                                 <img src="/static/assets/logo.png" alt="Rikoukei Labs" style="width: 100%; height: auto;">
