--- a/app/static/dashboard.html
+++ b/app/static/dashboard.html
@@ -834,15 +834,15 @@ Dr. Fatima Al-Saud,fatima@academy.edu</pre>
                                 <img src="/static/assets/logo.png" alt="Rikoukei Labs" style="width: 100%; height: auto;">
                             </div>
                             <div style="flex: 1; display: flex; flex-direction: column; justify-content: center;">
-                                <h2 style="font-size: 28px; font-weight: 700; color: #0f172a; margin: 0 0 4px 0;">Rikoukei Labs</h2>
-                                <p style="font-size: 16px; font-style: italic; color: #64748b; margin: 0 0 24px 0;">Scientific Software Solutions</p>
-                                <div style="font-size: 14px; color: #475569; line-height: 1.8;">
+                                <h2 style="font-size: 28px; font-weight: 700; color: #ffffff; margin: 0 0 4px 0;">Rikoukei Labs</h2>
+                                <p style="font-size: 16px; font-style: italic; color: #ffffff; margin: 0 0 24px 0;">Scientific Software Solutions</p>
+                                <div style="font-size: 14px; color: #ffffff; line-height: 1.8;">
                                     <p style="margin: 0 0 8px 0;">
                                         <i class="fa-solid fa-globe" style="width: 18px; color: #94a3b8;"></i>
                                         <a href="https://www.rikoukeilabs.com" target="_blank" style="color: #2563eb; text-decoration: none;">www.rikoukeilabs.com</a>
                                     </p>
                                     <p style="margin: 0 0 8px 0;">
-                                        <i class="fa-solid fa-user" style="width: 18px; color: #94a3b8;"></i>
+                                        <i class="fa-solid fa-user" style="width: 18px; color: #ffffff;"></i>
                                         <span>Contact - Sam Victor, Principal Architect</span>
                                     </p>
                                     <p style="margin: 0;">
@@ -853,7 +853,7 @@ Dr. Fatima Al-Saud,fatima@academy.edu</pre>
                             </div>
                         </div>
                         <div style="margin-top: 40px; padding-top: 24px; border-top: 1px solid #e2e8f0; text-align: center;">
-                            <p style="font-size: 12px; color: #94a3b8; margin: 0;">© 2026, Rikoukei Labs FZ-LLC, All rights reserved.</p>
+                            <p style="font-size: 12px; color: #ffffff; margin: 0;">© 2026, Rikoukei Labs FZ-LLC, All rights reserved.</p>
                         </div>
                     </div>
                 </div>
