bugfix: improve readability, again

--- a/app/static/dashboard.html
+++ b/app/static/dashboard.html
@@ -838,16 +838,16 @@ Dr. Fatima Al-Saud,fatima@academy.edu</pre>
                                 <p style="font-size: 16px; font-style: italic; color: #ffffff; margin: 0 0 24px 0;">Scientific Software Solutions</p>
                                 <div style="font-size: 14px; color: #ffffff; line-height: 1.8;">
                                     <p style="margin: 0 0 8px 0;">
-                                        <i class="fa-solid fa-globe" style="width: 18px; color: #94a3b8;"></i>
-                                        <a href="https://www.rikoukeilabs.com" target="_blank" style="color: #2563eb; text-decoration: none;">www.rikoukeilabs.com</a>
+                                        <i class="fa-solid fa-globe" style="width: 18px; color: #ffffff;"></i>
+                                        <a href="https://www.rikoukeilabs.com" target="_blank" style="color: #ffffff; text-decoration: none;">www.rikoukeilabs.com</a>
                                     </p>
                                     <p style="margin: 0 0 8px 0;">
                                         <i class="fa-solid fa-user" style="width: 18px; color: #ffffff;"></i>
                                         <span>Contact - Sam Victor, Principal Architect</span>
                                     </p>
                                     <p style="margin: 0;">
-                                        <i class="fa-solid fa-envelope" style="width: 18px; color: #94a3b8;"></i>
-                                        <a href="mailto:sam.victor@rikoukeilabs.com" style="color: #2563eb; text-decoration: none;">sam.victor@rikoukeilabs.com</a>
+                                        <i class="fa-solid fa-envelope" style="width: 18px; color: #ffffff;"></i>
+                                        <a href="mailto:sam.victor@rikoukeilabs.com" style="color: #ffffff; text-decoration: none;">sam.victor@rikoukeilabs.com</a>
                                     </p>
                                 </div>
                             </div>
